[tool.poetry]
name = "dbt"
version = "0.1.0"
description = "Public data for processing Manser's Dictionary of Bible Themes"
authors = ["Sean Boisen <sean.boisen@biblica.com>"]
repository = "https://github.com/Clear-Bible/BibleThemes"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
Python = ">=3.10,<=3.12"
jupyterlab = "^4.3.4"
nbclassic = "^1.1.0"
black = "^24.10.0"
jupyter-server-ydoc = "^1.1.0"
jupyter-server-fileid = "^0.9.3"
mkdocstrings = "^0.27.0"
mkdocs-mermaid2-plugin = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"

[tool.black]
line-length = 100
target-version = ['py39']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]


